--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>study-tinke-hyungchae</title>
+    <title>study-tinke-hyungchae-2</title>
     <link rel="stylesheet" href="css/all.css"/>
 </head>
 
