--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
 <!--  section3 - hands :: by 태훈 -->
 <div class="section third">
     <div class="hands"></div>
+    <div></div>
     <div class="container_third">
         <div class="box">
             <div class="contents">
