--- a/index.html
+++ b/index.html
@@ -299,6 +299,8 @@
 
     <!--  섹션1  -->
     <div id="share" class="section">
+        <div>test</div>
+        <div>test2</div>
         <div class="container">
             <!--  콘텐츠1  -->
             <div class="contents">
