--- a/index.html
+++ b/index.html
@@ -299,8 +299,11 @@
 
     <!--  섹션1  -->
     <div id="share" class="section">
-        <div>test</div>
-        <div>test2</div>
+        <div class="test"></div>
+        <div class="test2"></div>
+        <div class="test3"></div>
+        <div class="test4"></div>
+
         <div class="container">
             <!--  콘텐츠1  -->
             <div class="contents">
