형채님 영역추가

--- a/index.html
+++ b/index.html
@@ -294,6 +294,15 @@
 <!--  //section5 - cont_5 :: by 수빈  -->
 
 
+
+<!--  section7 - share & mobile :: by 형채  -->
+<div>
+    <!-- todo :: 형채님 이쪽에 작업한 내용 넣어주세요 ^^ -->
+</div>
+<!--  //section7 - share & mobile :: by 형채  -->
+
+
+
 <!--  section7 - share & mobile :: by 영재  -->
 <div id="youngJae">
 
