--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
         <!-- 글씨 부분 -->
         <div class="content">
-            <h1>Introducing</h1>
+            <h2>Introducing</h2>
 
             <div class="logo"></div>
             <div class="clear"></div>
@@ -98,16 +98,12 @@
                 It's small. It's light. Its unique design means you can take it anywhere and monitor your fitness
                 and wellness anytime.
             </p>
-
-            <br/>
-            <br/>
-
             <p>
                 All it takes is a touch of your finger, and it measures your heart rate, respiratory rate, blood
                 oxygen saturation level & heart rate variability.
             </p>
 
-            <a href="" class="btn_next_section">
+            <a href="" class="btn_next_section2">
                 <div class="btn_next">Next</div>
             </a>
         </div>
@@ -115,12 +111,13 @@
 
         <!-- 푸터 링크 부분 -->
         <div class="content_link">
+            <hr/>
             <ul>
                 <li>AS FEATURED IN</li>
-                <li><a href="media.html" class="cnn"></a></li>
-                <li><a href="media.html" class="gizmodo"></a></li>
-                <li><a href="media.html" class="wired"></a></li>
-                <li><a href="media.html" class="forbes"></a></li>
+                <li class="img_cnn"><a href="media.html" class="cnn"></a></li>
+                <li class="img_gizmodo"><a href="media.html" class="gizmodo"></a></li>
+                <li class="img_wired"><a href="media.html" class="wired"></a></li>
+                <li class="img_forbes"><a href="media.html" class="forbes"></a></li>
             </ul>
         </div>
         <!-- //푸터 링크 부분 -->
