--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>study-tinke-hyungchae-2</title>
+    <title>tinke</title>
     <link rel="stylesheet" href="css/all.css"/>
 </head>
 
@@ -78,6 +78,14 @@
 
 <!--  section1 - splash(임시) :: by 영인   -->
 <div id="splash" class="section">
+    <div class="container">
+        <div class="">
+            <div class="hand">
+                <div class="hand1"></div>
+                <div class="hand2"></div>
+            </div>
+        </div>
+    </div>
 </div>
 <!--  //section1 - splash(임시) :: by 영인  -->
 
@@ -299,11 +307,6 @@
 
     <!--  섹션1  -->
     <div id="share" class="section">
-        <div class="test"></div>
-        <div class="test2"></div>
-        <div class="test3"></div>
-        <div class="test4"></div>
-
         <div class="container">
             <!--  콘텐츠1  -->
             <div class="contents">
