--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 </div>
 
 <div class="navi_top">
+    <div></div>
     <a href="" class="company"><span class="v_h">회사명</span></a>
 
     <!--  div class="gnb_center"  -->
