--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>tinke</title>
     <link rel="stylesheet" href="css/all.css"/>
+	<script src="js/jquery.min.js"></script>
+	<script src="js/main.js"></script>
+	<script src="js/malkeun.js"></script>
+    <script src="js/tinke.js"></script>
+    <script>
+        var tinke;
+
+        $(document).ready(function() {
+            tinke = new Tinke();
+            tinke.taehoon();
+        });
+
+    </script>
 </head>
 
 <body>
@@ -21,6 +34,8 @@
         <div><span class="v_h">페이스북연결</span></div>
     </h1>
 </div>
+
+
 
 <div class="navi_top">
     <a href="" class="company"><span class="v_h">회사명</span></a>
@@ -53,6 +68,15 @@
     <!--  //div class="gnb_center"  -->
 </div>
 <!--  //navi_top :: by 태훈  -->
+
+
+
+<!--  tinke :: by 아미  -->
+<div id="topLayer">
+    <div id="tinke"></div>
+</div>
+<!--  tinke :: by 아미  -->
+
 
 
 <!--  navi_right :: by 영재  -->
@@ -119,7 +143,6 @@
 
         <!-- 푸터 링크 부분 -->
         <div class="content_link">
-            <hr/>
             <ul>
                 <li>AS FEATURED IN</li>
                 <li class="img_cnn"><a href="media.html" class="cnn"></a></li>
@@ -220,15 +243,18 @@
 
 
 <!--  section4 - brain :: by 맑은 -->
-<div class="part4">
+<div class="part4 section">
     <div class="cardio_stress">
         <div class="cardio_body">
             <div class="body_left"></div>
             <div class="body_right">
                 <div class="brain">
-
+					<div class="inner"></div>
                 </div>
-                <div class="heart"></div>
+                <div class="heart">
+                	<div class="beat"></div>
+                	<div class="circle"></div>
+                </div>
                 <div class="sound"></div>
             </div>
         </div>
