--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
             tinke = new Tinke();
             tinke.taehoon();
         });
-
     </script>
 </head>
 
@@ -34,8 +33,6 @@
         <div><span class="v_h">페이스북연결</span></div>
     </h1>
 </div>
-
-
 
 <div class="navi_top">
     <a href="" class="company"><span class="v_h">회사명</span></a>
@@ -71,47 +68,83 @@
 
 
 
-<!--  tinke :: by 아미  -->
-<div id="topLayer">
-    <div id="tinke"></div>
-</div>
-<!--  tinke :: by 아미  -->
-
-
-
 <!--  navi_right :: by 영재  -->
 <div class="navi_right">
-    <div class="toggle_device">
-        <div class="apple"></div>
-        <div class="android"></div>
-    </div>
-    <ul class="navigation">
-        <li class="nav" title="#1"></li>
-        <li class="nav" title="#2"></li>
-        <li class="nav" title="#3"></li>
-        <li class="nav" title="#4"></li>
-        <li class="nav" title="#5"></li>
-        <li class="nav" title="#6"></li>
-        <li class="nav" title="#7"></li>
-        <li class="nav" title="#8"></li>
-        <li class="nav" title="#9"></li>
-    </ul>
+	<div class="toggle_device">
+		<div class="apple"></div>
+		<div class="android"></div>
+	</div>
+	<ul class="navigation">
+		<li class="nav" title="#1"></li>
+		<li class="nav" title="#2"></li>
+		<li class="nav" title="#3"></li>
+		<li class="nav" title="#4"></li>
+		<li class="nav" title="#5"></li>
+		<li class="nav" title="#6"></li>
+		<li class="nav" title="#7"></li>
+		<li class="nav" title="#8"></li>
+		<li class="nav" title="#9"></li>
+	</ul>
 </div>
 <!--  //navi_right :: by 영재  -->
+
+
+
+<!--  tinke :: by 영재  -->
+<div id="topPlayer">
+	<div class="topPlayerWrapper">
+		<div id="tinke">
+			<div id="tinke_light"></div>
+			<div id="tinke_body">
+				<div class="white"></div>
+				<div class="black"></div>
+				<div class="pink"></div>
+				<div class="blue"></div>
+				<div class="shadow"></div>
+			</div>
+			<div id="tinke_outline"></div>
+			<div id="tinke_parts">
+				<div class="top"></div>
+				<div class="bottom"></div>
+				<div class="body"></div>
+			</div>
+		</div>
+	</div>
+</div>
+<!--  tinke :: by 영재  -->
+
 
 
 <!--  section1 - splash(임시) :: by 영인   -->
 <div id="splash" class="section">
     <div class="container">
-        <div class="">
-            <div class="hand">
-                <div class="hand1"></div>
-                <div class="hand2"></div>
-            </div>
-        </div>
+		<div class="hand">
+			<div class="hand1"></div>
+			<div class="hand2"></div>
+		</div>
+		<div class="text">
+			<h2><span class="i_r">tinke</span></h2>
+			<p>The only fitness & wellness tracker that measures your Heart Rate, Respiratory Rate, Blood Oxygen
+				saturation and Heart Rate Variability.</p>
+			<p>
+				FREE SHIPPING WORLDWIDE
+				<a href="#" class="btn_buy"><span class="i_r">buy</span></a>
+			</p>
+			<div class="selectBox">
+				<p>
+					SELECT YOUR TINKE
+					<button type="button" class="btn_ios on">For iOS Devices</button>
+					<button type="button" class="btn_android">For Android Devices</button>
+				</p>
+			</div>
+		</div>
+		<div class="navi">
+			<button type="button">take the tour</button>
+		</div>
     </div>
 </div>
 <!--  //section1 - splash(임시) :: by 영인  -->
+
 
 
 <!--  section2 - intro :: by 도륜  -->
