--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>tinke</title>
     <link rel="stylesheet" href="css/all.css"/>
 	<script src="js/jquery.min.js"></script>
-	<script src="js/main.js"></script>
+	<script src="js/TweenMax.min.js"></script>
+	<!--<script src="js/main.js"></script>-->
 	<script src="js/malkeun.js"></script>
     <script src="js/tinke.js"></script>
     <script>
@@ -116,7 +117,7 @@
 
 
 <!--  section1 - splash(임시) :: by 영인   -->
-<div id="splash" class="section">
+<div id="splash" class="section"  data-section>
     <div class="container">
 		<div class="hand">
 			<div class="hand1"></div>
@@ -148,7 +149,7 @@
 
 
 <!--  section2 - intro :: by 도륜  -->
-<div id="intro" class="section">
+<div id="intro" class="section"  data-section>
 
     <!-- 전체 담는 container -->
     <div class="container">
@@ -192,7 +193,7 @@
 
 
 <!--  section3 - hands :: by 태훈 -->
-<div class="section third">
+<div class="section third"  data-section>
     <div class="hands"></div>
     <div class="container_third">
         <div class="box">
@@ -276,7 +277,7 @@
 
 
 <!--  section4 - brain :: by 맑은 -->
-<div class="part4 section">
+<div class="part4 section" data-section>
     <div class="cardio_stress">
         <div class="cardio_body">
             <div class="body_left"></div>
@@ -358,7 +359,7 @@
 
 
 <!--  section7 - share & mobile :: by 영재  -->
-<div id="youngJae">
+<div id="youngJae"  data-section>
 
     <!--  섹션1  -->
     <div id="share" class="section">
@@ -455,7 +456,7 @@
 
 
 <!--  section 8 - bottomNav & footer :: by 아미  -->
-<div class="num_eight">
+<div class="num_eight"  data-section>
     <div class="tinke_pocket">
     </div>
     <div class="mobility">
@@ -499,7 +500,7 @@
         </li>
     </ul>
 </div>
-<div class="footer_wrap">
+<div class="footer_wrap"  data-section>
     <div class="footer">
         <ul class="f_list_1">
             <li><a href="#">zensorium</a></li>
